fix cumulative layout shift

--- a/frontend/src/pages/Home/home.module.scss
+++ b/frontend/src/pages/Home/home.module.scss
@@ -12,6 +12,12 @@
 
     flex-direction: column;
     width: 100%;
+
+    .hidden {
+      height: 100vh;
+      background-color: #202027;
+      opacity: 0;
+    }
   }
 
   .cardsSection {
