--- a/frontend/src/pages/Home/videoBanner.module.scss
+++ b/frontend/src/pages/Home/videoBanner.module.scss
@@ -8,6 +8,14 @@
   justify-content: center;
   background-color: theme.$primary-background-color;
 
+  .skeletonPlaceholder {
+    height: 90vh;
+
+    @include media.mobile {
+      height: 36vh;
+    }
+  }
+
   .videoWrapper {
     position: relative;
     display: flex;
@@ -19,6 +27,14 @@
     pointer-events: none;
 
     @include z-index(videobanner);
+
+    @include media.mobile {
+      height: 36vh;
+    }
+
+    .hidden {
+      opacity: 0;
+    }
 
     .textBanner {
       position: absolute;
@@ -46,6 +62,10 @@
       width: 100%;
       height: 100%;
       border-radius: theme.$border-radius-small;
+
+      @include media.mobile {
+        height: 36vh;
+      }
     }
   }
 }
